# mnemo-cortex

./: .gitignore  CHANGELOG.md  CORTEX-OS.md  Dockerfile  PRIVACY.md  README.md  ROBOT-INFO-SPEC.md  SECURITY.md  SESSION-GUIDE.md  agentb.yaml.example  llms.txt  mnemo-dream.py  mnemo-wiki-compile.py  pyproject.toml  robot-install.sh  robot.info  robot.install  robot.install.md
.github/workflows/: ci.yml
agentb/: __init__.py  analyst.py  cache.py  capture_gate.py  classify.py  cli.py  config.py  facts_store.py  fsutil.py  mem0_bridge.py.retired-20260523  migrate.py  provenance.py  providers.py  redact.py  refresher.py  server.py  sessions.py  stick.py  stick_facts.py  trajectory.py  vec.py  watcher.py
clawhub-skills/mnemo-cortex/: SKILL.md
deploy/macos/: com.mnemo-cortex.server.plist
docs/: cortex-stick.md  install-chatgpt.md  install-claude-desktop-linux.md  install-claude-desktop-windows.md  install-macos.md  local-llm-hosts.md
integrations/agent-zero/: README.md
integrations/al-gate/: README.md  curl-transcript.md  install-task.ps1  openapi.json  run-al-gate.ps1  server.py
integrations/anythingllm/: README.md
integrations/chatgpt/: README.md  install-task.ps1  openapi.json  run-gate.ps1  server.py
integrations/claude-code/: mnemo-cc-sync-watchdog.sh  mnemo-cc-sync.py  mnemo-writeback.sh
integrations/claude-desktop/: BUILD.md  README.md  manifest.json  mnemo-cortex.mcpb
integrations/hermes/: README.md  config.yaml.example  install.sh
integrations/lmstudio/: README.md
integrations/mcp-bridge/: CHANGELOG.md  README.md  boot-budget.js  boot-budget.test.js  dump.js  dump.test.js  harness-tool-filter.js  harness-tool-filter.test.js  lane-guard.js  lane-guard.test.js  package-lock.json  package.json  server.js  test.js
integrations/ollama-desktop/: README.md
integrations/openclaw-mcp/: CHANGELOG.md  README.md  package-lock.json  package.json  server.js
passport/: README.md  api.py  validation.py
scripts/: wheel-smoke-test.sh
sparks_bus/: sparks-bus-watcher.py
tests/: conftest.py  test_agentb.py  test_al_gate.py  test_analyst.py  test_atomic_writers.py  test_capture_gate.py  test_cc_sync_offsets.py  test_chatgpt_gate.py  test_cli_reindex_discovery.py  test_context_disk_truth_filter.py  test_context_vec_filter.py  test_dream_cap.py  test_dream_endpoint.py  test_dream_strategies.py  test_embedding_integrity.py  test_explore_mode.py  test_facts_store.py  test_ingest_dedup.py  test_m_group_server.py  test_m_group_storage.py  test_query_expansion.py  test_ranking.py  test_redact.py  test_robot_info.py  test_security_c1_c2.py  test_stick.py  test_stick_facts.py  test_trajectory.py  test_trajectory_endpoints.py  test_vec.py  test_watcher_data_loss.py
tests/ongoing/: run-tests.sh
tests/passport/: corpus_score.py  test_api.py  test_detectors.py  test_git_helper.py
tools/: README.md  seed-facts-nightly.sh  seed-facts-post-commit.sh  seed-facts.example.yaml  seed-facts.py
