[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mnemo-cortex"
version = "4.9.12"
description = "Don't Fear the /new! Cognitive coprocessor with active memory for AI agents. SQLite-backed total recall."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Guy Hutchins", email = "guy@projectsparks.ai"},
]
keywords = ["ai", "agents", "memory", "openclaw", "llm", "coprocessor", "semantic-search"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    # 0.136.3 is MAL-2026-4750 — tampered pyproject silently pulls 'fastar'
    # typosquat via [standard] extra. We don't use [standard], so no payload
    # got pulled, but pin away from the malicious release as defense-in-depth.
    # Drop the != exclusion once PyPI yanks 0.136.3 or fastapi ships 0.136.4 clean.
    "fastapi>=0.115,!=0.136.3",
    "starlette>=1.0.1",
    "uvicorn>=0.30",
    "pydantic>=2.8",
    "pyyaml>=6.0",
    "click>=8.1",
    "rich>=13.0",
    "httpx>=0.25",
    "numpy>=1.24",
    "sqlite-vec>=0.1.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]
# Sparks Bus watcher script ships in the package but is opt-in:
# install with `pip install mnemo-cortex[sparks-bus]` to pull `requests`.
sparks-bus = [
    "requests>=2.28",
]

[project.urls]
Homepage = "https://github.com/GuyMannDude/mnemo-cortex"
Documentation = "https://github.com/GuyMannDude/mnemo-cortex#readme"
Repository = "https://github.com/GuyMannDude/mnemo-cortex"
Issues = "https://github.com/GuyMannDude/mnemo-cortex/issues"

[project.scripts]
mnemo-cortex = "agentb.cli:main"
mnemo = "agentb.cli:main"

[tool.setuptools.packages.find]
include = ["agentb*", "passport*", "sparks_bus*"]

[tool.setuptools.package-data]
sparks_bus = ["schema.sql"]
